--- a/force-app/main/default/classes/MessengerUtils.cls
+++ b/force-app/main/default/classes/MessengerUtils.cls
@@ -2,13 +2,8 @@ public with sharing class MessengerUtils {
     @AuraEnabled(cacheable=true)
     public static List<User> findUsers(String searchKey) {
         String key = '%' + searchKey + '%';
-        system.debug([SELECT Id, Name, Title FROM User WHERE Name LIKE :key WITH SECURITY_ENFORCED LIMIT 50]);
-        return [SELECT Id, Name, Title, FullPhotoUrl FROM User WHERE Name LIKE :key WITH SECURITY_ENFORCED LIMIT 500];
-    }
-
-    @AuraEnabled(cacheable=true)
-    public static List<User> findUser(Id userId) {
-        return [SELECT Id, Name, Title, FullPhotoUrl FROM User WHERE Id =: userId];
+        id i = userInfo.getUserId();
+        return [SELECT Id, Name, Title, FullPhotoUrl FROM User WHERE Name LIKE :key AND Id !=: i WITH SECURITY_ENFORCED LIMIT 500];
     }
 
     @AuraEnabled(cacheable=true)
